# ursula

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs-deploy.yml  dst-nightly.yml
crates/ursula/: Cargo.toml
crates/ursula-bench/src/: bootstrap.rs
crates/ursula-raft/: Cargo.toml  build.rs
crates/ursula-raft/proto/: durable.proto  raft_internal.proto
crates/ursula-raft/src/: codec.rs  engine.rs  forward.rs  grpc.rs  lib.rs  registry.rs  rt.rs  sim_runtime.rs  state_machine.rs  tests.rs  types.rs
crates/ursula-raft/src/engine/: factory.rs  mod.rs
crates/ursula-raft/src/log_store/: file.rs
crates/ursula-runtime/: Cargo.toml
crates/ursula-runtime/benches/: append_apply.rs  cold_cache.rs  hot_snapshot.rs
crates/ursula-runtime/src/: admission.rs  cold_store.rs  core_worker.rs  engine_in_memory.rs  error.rs  group_actor.rs  lib.rs  metrics.rs  request.rs  rt.rs  runtime.rs  snapshot_store.rs  tests.rs
crates/ursula-runtime/src/engine/: in_memory.rs  mod.rs  wal.rs
crates/ursula-sim/: Cargo.toml
crates/ursula-sim/corpus/: failure-smoke.json  schedule-smoke.json  smoke.json
crates/ursula-sim/src/: lib.rs
crates/ursula-sim/src/faults/: mod.rs
crates/ursula-stream/: Cargo.toml
crates/ursula-stream/src/: integrity.rs  lib.rs  snapshot.rs  state_machine.rs
crates/ursula-stream/src/state_machine/: tests.rs
crates/ursula/src/: bootstrap.rs  lib.rs  render.rs  tests.rs
crates/ursula/tests/: static_cluster_cli.rs
docs/architecture/: deterministic-simulation-testing.md  thread-per-core-multiraft.md
docs/migration/: final-goal-audit.md  perf-compare-cpu-saturation.md
docs/operations/: ec2-static-cluster.md
docs/web/scripts/: build-llm-docs.mjs
docs/web/src/: App.tsx  prerender.tsx
scripts/: ursula_chaos_agent.py  ursula_chaos_faultd.py  ursula_ec2.py
scripts/dst/: __init__.py  __main__.py  audits.py  cli.py  common.py  nondeterminism_whitelist.json  reports.py  tests.py  tools.py
(+35 files in other folders)
