[package]
name = "ursula-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Per-core actor runtime for Ursula: hot ring, cold-tier flush, and the replaceable group-engine boundary."

[dependencies]
bytes = { version = "1.7", features = ["serde"] }
opendal = { version = "0.51", features = ["services-memory", "services-s3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time"] }
ursula-shard = { path = "../ursula-shard", version = "0.1.0" }
ursula-stream = { path = "../ursula-stream", version = "0.1.0" }

[target.'cfg(madsim)'.dependencies]
sim-tokio = { package = "madsim-tokio", version = "0.2.30", features = ["macros", "rt", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "cold_cache"
harness = false

[[bench]]
name = "hot_snapshot"
harness = false

[[bench]]
name = "append_apply"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }
