[package]
name = "ursula-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Durable Streams state machine for Ursula: bucket and stream commands, events, and offset bookkeeping."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
setsum = "0.8.0"
ursula-shard = { path = "../ursula-shard", version = "0.1.0" }
ursula-proto = { path = "../ursula-proto", version = "0.1.0" }

[dev-dependencies]
proptest = "1.11.0"
serde_json = "1.0"
